채팅방 목록 기능 수정

--- a/chat.html
+++ b/chat.html
@@ -66,7 +66,7 @@
                       </div>
                   </div> -->
 
-                  <div id="con" class="conversation active">
+                  <!-- <div id="con" class="conversation active">
                       <div class="top">
                           <span class="badge">2</span>
                           <span class="title">Title</span>
@@ -76,7 +76,7 @@
                           <span class="user">Sofia:</span>
                           <span class="message">last message</span>
                       </div>
-                  </div>
+                  </div> -->
 
                   <!-- <div class="conversation">
                       <div class="top">
